k8s/sonarqube-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: sonar
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: sonar
    http:
      paths:
      - path: /
        backend:
          serviceName: sonarport
          servicePort: 80
